# openvino

./: .gitignore  .gitmodules  build.sh  compile_expts.sh  compile_test.py
samples/cpp/greedy_causal_lm/: CMakeLists.txt  main.cpp
samples/python/greedy_causal_lm/: with_optimum.py  with_ov_core.py
